[FIX] web_enterprise: search panel on mobile
Steps to reproduce:

1. Open "Documents" app
2. Click on "Filter..." to open the left panel
3. Click on a tag

The problem was that users were thinking that
"Select..." located in the modal was a field.

Theses following changes will be applied:
- Rename 'Filter...' to 'All'.
- Add "Filters" as the modal name.
- Remove the current selected filters from the dialog.
- Remove the flickering animation on tag selection change.

Linked to https://github.com/odoo/enterprise/pull/8734

Task ID: 2200099

closes odoo/enterprise#9364

X-original-commit: c24297bebbae7356f42e41c22c49d1c6815ae771

--- a/web_enterprise/static/src/scss/search_panel_mobile.scss
+++ b/web_enterprise/static/src/scss/search_panel_mobile.scss
@@ -40,7 +40,7 @@
                 @include o-details-hide-caret();
                 padding: $o-searchpanel-p-small $o-searchpanel-p;
 
-                .o_search_panel_mobile_close {
+                .o_search_panel_mobile_close, .o_search_panel_mobile_title {
                     display: none;
                 }
             }
@@ -49,15 +49,6 @@
                 @include o-details-modal();
                 padding-top: $o-navbar-height !important;
                 padding-bottom: $o-navbar-height !important;
-
-                > summary ~ * {
-                    animation: o_searchpanel_sweepdown 0.3s ease-in-out;
-                }
-
-                @keyframes o_searchpanel_sweepdown {
-                    0%    {opacity: 0;}
-                    100%  {opacity: 1;}
-                }
 
                 > summary {
                     @include o-details-modal($bottom: initial);
@@ -79,16 +70,14 @@
                         display: initial;
                         pointer-events: initial;
                     }
+
+                    .o_search_panel_mobile_title {
+                        display: initial;
+                    }
                 }
 
                 > .o_search_panel_section {
                     margin: 0 $o-searchpanel-p;
-                }
-
-                > .o_search_panel_current_selection {
-                    margin: $o-searchpanel-p $o-searchpanel-p $o-searchpanel-p-small;
-                    padding-bottom: $o-searchpanel-p;
-                    border-bottom: 1px solid lightgray;
                 }
 
                 .o_searchview_facet_label,
